[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Danilo Altomar <danilo.altomar@gmx.de>"]
description = "Sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/daltomar/hello-wasm"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2"
